test/classes/casts/argumentCoerce_ConstIn/error/from-borrowed-Parent-to-borrowed-Child-nilable.chpl
// AUTO-GENERATED: Do not edit
class A {}
class Parent {}
class Child : Parent {}
// coercing from borrowed Parent to borrowed Child?
proc bar(const in x: borrowed Child?) {}
proc foo() {
  var alloc = new owned Parent();
  var a:borrowed Parent = alloc;
  bar(a);
}
proc main() {
  foo();
}
